--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <h3>Have a good time</h3>
+      <h3>Have a good time with dad jokes</h3>
       <div id="joke" class="joke">
         Here comes the joke
       </div>
